package com.springboot.MyTodoList.web.features.task.dto;

public record CompleteTaskRequestDTO(Double actualHours) {}